[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/frame.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/viewport.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/button.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/SourceSansPro-BoldItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/main.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Root" type="Node"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="LevelBorder" type="Sprite" parent="."]
position = Vector2( 55, 55 )
texture = ExtResource( 3 )
centered = false

[node name="LevelSpawnPosition" type="Node2D" parent="."]
position = Vector2( 56, 56 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -144.787
margin_top = -77.8976
margin_right = -22.7874
margin_bottom = 82.1024
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 122.0
margin_bottom = 160.0
custom_constants/separation = 10
alignment = 1

[node name="ButtonGoDeeper" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 1.0
margin_right = 122.0
margin_bottom = 47.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ButtonGoDeeper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -10.5
margin_right = 38.5
margin_bottom = 10.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.588235, 1, 0, 1 )
text = "GO DEEPER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRefocus" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 122.0
margin_bottom = 103.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ButtonRefocus"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -10.5
margin_right = 36.0
margin_bottom = 10.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.588235, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "REFOCUS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonWakeUp" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 122.0
margin_bottom = 159.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ButtonWakeUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -10.5
margin_right = 36.0
margin_bottom = 10.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.588235, 1, 0, 1 )
text = "WAKE UP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonGoDeeper" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonRefocus" to="." method="_on_ButtonRefocus_pressed"]
